# fiedka

./: .babelrc  .eslintrc.json  .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  forge.config.js  forge.config.ts  genfixtures.sh  genpages.sh  go.workspace  jest.config.js  next.config.js  package-lock.json  package.json  shell.nix  tsconfig.json  webpack.config.js  webpack.main.config.js  webpack.main.config.ts  webpack.plugins.js  webpack.plugins.ts  webpack.renderer.config.js  webpack.renderer.config.ts  webpack.rules.js  webpack.rules.ts
.github/workflows/: shipit.yml
.storybook/: main.js  main.ts  preview.js  tsconfig.json
depex/: depex.json
src/: AMDImage.jsx  App.jsx  NumberInput.jsx  Style.jsx  UEFIImage.jsx  UEFIImage.stories.jsx  _utils.js  global-style.js  go.mod  go.sum  index.html  index.jsx  index.ts  main.css  main.go  main.jsx  renderer.ts  store.js
src/Analysis/: A3MSTX_3.60.amd.json  A3MSTX_3.60.fmap.json  A3MSTX_3.60.uefi.json  A3MSTX_3.60K.amd.json  A3MSTX_3.60K.fmap.json  AMDImage.jsx  AMDImage.stories.jsx  CBFSImage.jsx  CBFSImage.stories.jsx  Feedback.jsx  MEFSImage.jsx  Main.jsx  UEFIImage.jsx  UEFIImage.stories.jsx  UnknownImage.jsx
src/CBFS/: CBFS.jsx  CBFS.stories.jsx  File.jsx  cbfs.json  s76.cbfs.json  s76.fmap.json  store.js
src/Flash/: store.js
src/Intel/: LeakedKey.jsx  LeakedKey.stories.jsx  store.js
src/MEFS/: File.jsx  MEFS.jsx  MEFS.stories.jsx  fixture_x270.json  store.js
src/PSP/: A3MSTX_3.60.psp.json  PspCard.jsx  PspCard.stories.jsx  PspDir.jsx  PspDir.stories.jsx  PspImage.jsx  PspImage.stories.jsx  entry-types.json  store.js
src/TPM/: Log.jsx  Log.stories.jsx  README.md  data.json  data.yml  eventlog.json  lemp10-tpm20.json  lemp10-tpm20_upgraded.json  t14-tpm20.json  tpmlog2.json  tpmlog2.yml
src/UEFI/: DepEx.js  EditContext.jsx  EditPane.fixtures.js  EditPane.jsx  EditPane.stories.jsx  FV.jsx  FV.stories.jsx  File.jsx  FirmwareVolumes.jsx  LinuxBoot.jsx  (+3 more)
src/rs/: Cargo.toml  rust-toolchain.toml
src/rs/src/: lib.rs  utils.rs
(+255 files in other folders)
