[package]
name = "fiedka-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo-utils = { version = "0.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
romulan = { path = "../../../romulan" }
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"
