[package]
name = "fiedka-rs"
version = "0.1.0"
authors = ["Daniel Maslowski <info@orangecms.org>"]
edition = "2021"
description = "Fiedka's internal Rust interface"
license = "MIT"
repository = "https://github.com/fiedka/fiedka"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
gloo-utils = { version = "0.2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
romulan = { path = "../../../romulan" }
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
